force-app/main/default/objects/PMC_SS_SalesArea__c/PMC_SS_SalesArea__c.object-meta.xml
<CustomObject>
    <description>Sales Area Object</description>
    <label>Sales Area</label>
    <nameField>
        <label>Sales Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>