force-app/main/default/objects/PMC_SS_SalesArea__c/fields/Entity_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Entity_CNPJ__c</fullName>
    <label>Entity CNPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>