force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_CPQ_SAPSalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPSalesOrganization__c</fullName>
    <description>Field to uniquely identify SAP Sales Organization</description>
    <externalId>true</externalId>
    <label>SAP Sales Organization</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>