force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_DH_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SalesArea__c</fullName>
    <formula>TEXT(PMC_SS_SalesOrganization__c)&amp;&quot; &quot; &amp;  
CASE( TEXT(PMC_SS_Division__c),
					&quot;10&quot;,&quot;Domestic&quot;,
					&quot;20&quot;,&quot;Export&quot;,
					&quot;30&quot;,&quot;Intercompany&quot;,&quot;&quot;) &amp;&quot; &quot;
					&amp; CASE( TEXT(PMC_SS_DistributionChannel__c),
					&quot;0&quot;,&quot;Common&quot;,
					&quot;00&quot;,&quot;Common&quot;,
					&quot;&quot;)</formula>
    <label>Sales Area</label>
    <type>Text</type>
</CustomField>