force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_SS_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DistributionChannel__c</fullName>
    <description>Specifies the Distribution Channel</description>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Common</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>