force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_SS_Division__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Division__c</fullName>
    <description>Specifies the Division</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Export</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Intercompany</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>