force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_SS_EntityAddress__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_EntityAddress__c</fullName>
    <description>This field is primarily created with the objective of capturing the address of the Mosaic Entity and to show it in the Contract Documents</description>
    <label>Entity Address</label>
    <type>Address</type>
</CustomField>