force-app/main/default/objects/PMC_SS_SalesArea__c/fields/PMC_SS_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesOrganization__c</fullName>
    <description>Specifies the Sales Organization</description>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fospar SA</fullName>
            </value>
            <value>
                <fullName>Comp. Minera Miski Mayo</fullName>
                <label>Minera Miski Mayo</label>
            </value>
            <value>
                <fullName>Mos. Sulphur Partner</fullName>
            </value>
            <value>
                <fullName>Mos Ag Innovation Sol,LLC</fullName>
                <label>Mosaic Ag Innov Sol</label>
            </value>
            <value>
                <fullName>Mosaic Potash Colonsay UL</fullName>
                <label>Mosaic CA Colonsay</label>
            </value>
            <value>
                <fullName>Mosaic CA Crop Nutrit, LP</fullName>
                <label>Mosaic CA Crop Nutri</label>
            </value>
            <value>
                <fullName>Mosaic Potash Esterhazy</fullName>
                <label>Mosaic CA Esterhazy</label>
            </value>
            <value>
                <fullName>Mosaic Canada ULC (BP)</fullName>
                <label>Mosaic CA ULC (BP)</label>
            </value>
            <value>
                <fullName>Mosaic Crop Nutrition LLC</fullName>
                <label>Mosaic CN Fertilizer</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizers (HK) L</fullName>
                <label>Mosaic Fert. (HK)</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizantes Ltd.</fullName>
                <label>Mosaic Fert Bahamas</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizers (BJ)</fullName>
                <label>Mosaic Fert BMF</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizantes do B</fullName>
                <label>Mosaic Fert Brasil</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizer LLC</fullName>
                <label>Mosaic Fertilizer</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizantes P&amp;K</fullName>
                <label>Mosaic Fert P&amp;K</label>
            </value>
            <value>
                <fullName>Mosaic Fertz Paraguay SRL</fullName>
                <label>Mosaic Fert Paraguay</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizers (QHD)</fullName>
                <label>Mosaic Fert QMF</label>
            </value>
            <value>
                <fullName>Mosaic Fertilizers (YT)</fullName>
                <label>Mosaic Fert YMF</label>
            </value>
            <value>
                <fullName>Mosaic Global Sales LLC</fullName>
                <label>Mosaic Global Sales</label>
            </value>
            <value>
                <fullName>Mosaic India Private Ltd.</fullName>
                <label>Mosaic India Pvt Ltd</label>
            </value>
            <value>
                <fullName>Mosaic Potash Carlsbad In</fullName>
                <label>Mosaic Potash Carlsb</label>
            </value>
            <value>
                <fullName>Mosaic Potássio Mineração</fullName>
                <label>Mosaic Potássio Mine</label>
            </value>
            <value>
                <fullName>Tampa Port Services, LLC</fullName>
                <label>Tampa Port Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>